# ros2_ws_test_ros2control

./: .gitignore  README.md
src/test1_ros2control/: CMakeLists.txt  README.md  package.xml  ros2_control_demo_example_1.xml
src/test1_ros2control/bringup/config/: rrbot_controllers.yaml
src/test1_ros2control/bringup/launch/: rrbot.launch.py  test_forward_position_controller.launch.py  test_joint_trajectory_controller.launch.py
src/test1_ros2control/description/launch/: view_robot.launch.py
src/test1_ros2control/description/ros2_control/: rrbot.ros2_control.xacro
src/test1_ros2control/description/urdf/: rrbot.urdf.xacro  rrbot_description.urdf.xacro
src/test1_ros2control/hardware/: rrbot.cpp
src/test1_ros2control/hardware/include/test1_ros2control/: rrbot.hpp  visibility_control.h
src/test1_ros2control/test/: test_urdf_xacro.py  test_view_robot_launch.py
src/test2_ros2control/: CMakeLists.txt  README.md  package.xml  test2_ros2control.xml
src/test2_ros2control/bringup/config/: rrbot_controllers.yaml  rrbot_forward_velocity_publisher.yaml
src/test2_ros2control/bringup/launch/: rrbot.launch.py  test_forward_position_controller.launch.py  test_forward_velocity_controller.launch.py
src/test2_ros2control/description/launch/: view_robot.launch.py
src/test2_ros2control/description/ros2_control/: rrbot.ros2_control.xacro
src/test2_ros2control/description/rviz/: rrbot.rviz
src/test2_ros2control/description/urdf/: rrbot.urdf.xacro  rrbot_description.urdf.xacro
src/test2_ros2control/hardware/: rrbot.cpp
src/test2_ros2control/hardware/include/test2_ros2control/: hardware_constants.hpp  rrbot.hpp  visibility_control.h
